# docs-infrastructure

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements-docs.txt  requirements.txt  setup.cfg
code/: Voting_solution-natspec.json
code/voting/: Voting_solution.spec
docs/source/: conf.py  cvl-ruleindex.rst  cvl-specindex.rst  example.rst  index.rst  packages_spelling_wordlist.txt  spelling_wordlist.txt
docs/source/features/: githublink.md  githublink.rst  includecvl.md  includecvl.rst
docs/source/output/: create_pdfs.sh  pdf.rst
docs/source/quickstart/: index.rst
docs/source/reference/: code.rst  codelink_extension.rst  configuration.rst  includecvl.rst  index.rst  scripts.rst
docs/source/showcase/: comments_todos.rst  glossary_example.md  glossary_example.rst  image.rst  index.rst  indexing_glossary.rst  latex.rst  misc.rst  video.rst
docs/source/showcase/admonitions/: admonitions_examples.md  admonitions_examples.rst  index.rst
docs/source/showcase/code_blocks/: cvl_code1.md  cvl_code1.rst  cvl_code2.md  cvl_code2.rst  index.rst
docs/source/showcase/panels/: index.rst  panels_dropdown.md  panels_dropdown.rst  panels_single_panel_example.md  panels_single_panel_example.rst  panels_two_cards_grid.md  panels_two_cards_grid.rst
docs/source/showcase/standard/: basic.md  basic.rst  index.rst  links_code.md  links_code.rst  links_external.md  links_external.rst  lists.rst  lists_definitions.md  lists_definitions.rst  lists_numbered.md  lists_numbered.rst  youtube_example.md  youtube_example.rst
src/docsinfra/: __init__.py
src/docsinfra/scripts/: quickstart.py
src/docsinfra/sphinx_utils/: __init__.py  autospec.py  codelink_extension.py  cvl2_lexer.py  cvl_domain.py  cvl_index.py  cvlid.py  includecvl.py
src/docsinfra/sphinx_utils/definitions/: defs.py  themes.py
src/docsinfra/templates/: .readthedocs.yaml  conf.py_t  root_doc.rst_t
