# Certora Documents Infrastructure - python package setup
#
# See https://setuptools.pypa.io/en/latest/references/keywords.html and
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# TODO
# - add LICENSE file?
# - add author, author_email, copyright
# - Additional metadata: url,
[metadata]
name = docsinfra
version = attr: docsinfra/.__version__

description = "Certora Documents Infrastructure"
long_description = file: README.md

keywords = Certora, documents, documentation


[options]
package_dir=
    =src
packages=find:
include_package_data = True

python_requires = >=3.10
install_requires =
    Sphinx>=7.4.5
    GitPython~=3.1
    CVLDoc==1.0.1
    sphinx-design~=0.6
    sphinxcontrib-youtube~=1.2.0
    sphinxcontrib-video~=0.2.0
    sphinx-argparse~=0.4.0
    sphinxcontrib-spelling~=8.0.0


[options.packages.find]
where=src


[options.package_data]
docsinfra.assets =
    *.svg
docsinfra.templates =
    *.py_t
    *.rst_t


[options.entry_points]
console_scripts =
    certora-doc-quickstart = docsinfra:certora_doc_quickstart
